deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizsgaremek-kulonut-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vizsgaremek-kulonut-api
  template:
    metadata:
      labels:
        app: vizsgaremek-kulonut-api
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: kulonut-api
          image: ghcr.io/vizsgaremek-13a-abm/kulonut-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kulonut-api-svc
spec:
  selector:
    app: vizsgaremek-kulonut-api
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      targetPort: 8000
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kulonut-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kulonutapi.jcloud.jedlik.cloud
      secretName: kulonut-api-tls
  rules:
    - host: kulonutapi.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kulonut-api-svc
                port:
                  number: 80
